2004-04-07  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_fwd_signal) : Check for valid file descriptor
	before passing to mod_rcmd_signal().

	* src/pdsh/dsh.c (_rsh_thread) : Block SIGPIPE outside while loop
	and before call to connect.

	* src/pdsh/opt.c (opt_args) : Pass PCP only arguments to modules
	when in DSH mode.

	* src/qsnet/qswutil.c, src/modules/mqcmd.c, src/modules/qcmd.c: 
	Add support for user supplied railmask (default to 1). Fix 
	broken multrail (for elanctrl interface) reported by Fabrizio
	Petrini <fabrizio@lanl.gov>

	* src/qsnet/qshell.c (get_qshell_info) : Re-map QSHELL_REMOTE_* 
	environment variables to their unprefixed counterparts to allow  
	propagation of LD_LIBRARY_PATH and LD_PREOPEN to qshell jobs as
	suggested by Ashley Pittman <ashley@quadrics.com>.
	
	
2004-04-02  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/Makfile.am : Need to link libqsw with libdl when not using 
	PAM. (Reported by Nicholas Henke <nic@clusterfs.com>)

	* src/common/hostlist.c : Update to latest hostlist code from
	LSD-Tools project.

2004-03-30  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_rsh_thread) : Remove calls to xfgets() and
	use internal pdsh buffering to line-buffer output data. (gnats:408)
	
	* src/pdsh/cbuf.c, src/pdsh/cbuf.h: Added.
	
	* src/common/xstring.c (xfgets, xfgets2) : Removed unused functions.
	
2004-03-23  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_wdog) : Fix bug in watchdog sleep (found
	by Al Chu <chu11@llnl.gov>).

	* src/pdsh/dsh.c (_rcp_thread, _rsh_thread): Set thread connect
	time before updating thread state to DSH_READING to avoid potential
	race in watchdog (found by Al Chu <chu11@llnl.gov>).

2004-03-15  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c, src/pdsh/mod.h, src/pdsh/opt.c : Misc. doc and 
	other cosmetic changes suggested by Py Watson <py@llnl.gov>.

	* src/pdsh/mod_rcmd.c : Move "mrsh" module to top position in
	rcmd_rank[], making it the default whenever installed.
	