@@ -1,3 +1,10 @@
+2004-04-08  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/qsnet/qswutil.c (_qsw_cap_create, _qsw_elan_nrails) : Added.
+
+	* src/qsnet/qswutil.c (qsw_setup_program) : Further refinement
+	of Elan multirail support.
+
 2004-04-07  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/dsh.c (_fwd_signal) : Check for valid file descriptor
